<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vn.nhan.phiendich.ForgetPassActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <TextView
            android:id="@+id/forget_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginBottom="20dp"
            android:text="@string/forget_notice"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/forget_email"
            android:hint="@string/hint_username_email"
            android:fontFamily="serif" />

        <Button
            android:text="@string/forget_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onlineContribute"
            android:fontFamily="serif"
            android:gravity="center"
            android:onClick="submit"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>
